DemoApp/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fleetman-application
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: fleetman
        image: richardchesterwood/k8s-fleetman-webapp-angular:release0
---
apiVersion: v1
kind: Service
metadata: 
  name: fleetman-webapp
spec:
  selector:
    app: webapp
  ports:
  # # - name: http
  # - port: 80
  #   nodePort: 30008
  # type: NodePort 
  type: NodePort
  ports:
 # - name: "vote-service"
  - port: 80
    targetPort: 30008
